tests/parsing/smtlib/v2.7/errors/065-declare-fun_unclosed_1.smt2
(set-logic ALL)
(declare-fun foo () bar _)
